# eth-flogger

./: .gitignore  README.md  data.sqlite  eth.py  pyproject.toml  server.py
static/styles/: main.css
templates/: index.html  txs.html
